--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
 
   }
   .required input {
-  border-color: blue;
+
+  border:solid 2px blue;
 }
 
 .errorField input {
   border-color: red !important;
+}
+.errorField  label{
+  color: red !important;
 }
 
 .errorField::after {
@@ -30,6 +34,7 @@
 body{
   background: linear-gradient(to left,green,gray);
 }
+
 </style>
 <body>
   <div   style="margin-top: 90px;" class="section">
@@ -37,18 +42,29 @@ body{
     <form id="registrationForm" 
     style="margin-left: 430px;
      margin-top: 30px;width: 420px;">
-      <p id=" errorMessage" class="error"></p>
-      <div class="mb-3" class="required">
+
+      <div class="mb-3">
+        <label for="email"  style="font-family: 
+'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 25px; color: white;
+" class="">Email</label>
         <input type="email" id="emailInput" 
         class="form-control" placeholder="Write your email" />
       </div>
-      <p id="nameError" class="error"></p>
-      <div class="mb-3"  class="required">
+
+      <div class="mb-3"  >
+        <label for="name"  style="font-family: 
+'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 25px; color: white;
+" class="">Nmae</label>
         <input type="text" id="nameInput"
          class="form-control" placeholder="Write your name" />
       </div>
-      <div class="mb-3"  class="required">
-        <p id=" errorMessage" class="error"></p>
+      <div class="mb-3">
+        <label for="surname"  style="font-family: 
+'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 25px; color: white;
+" class="">Surname</label>
         <input
           type="text"
           id="surnameInput"
@@ -56,8 +72,11 @@ body{
           placeholder="Write your surname"
         />
       </div>
-      <div class="mb-3" class="required">
-        <p id=" errorMessage" class="error"></p>
+      <div class="mb-3 " >
+<label for="password"  style="font-family: 
+'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 25px; color: white;
+" class="">Password</label>
         <input
           type="password"
           id="passwordInput"
@@ -70,10 +89,7 @@ body{
         type="submit"
         id="submitButton"
         class="btn btn-primary"
-        style="margin-left: 100px; width: 230px;"
-      >
-        Продолжить
-      </button>
+        style="margin-left: 100px; width: 230px;"> Продолжить </button>
     </form>
     <h3 style="margin-left: 540px; margin-top: 30px;">Войти в аккаунт</h3>
   </div>
@@ -103,6 +119,9 @@ submitButton.addEventListener("click", function (event) {
 
   if (nameValue === '' && nameInput.parentElement.classList.contains('required')) {
     showErrorMessage(nameInput, "Lütfen bir isim girin.");
+ 
+
+
     hasError = true;
   } else {
     hideErrorMessage(nameInput);
@@ -110,13 +129,17 @@ submitButton.addEventListener("click", function (event) {
 
   if (surnameValue === '' && surnameInput.parentElement.classList.contains('required')) {
     showErrorMessage(surnameInput, "Lütfen bir soyad girin.");
+    surnameInput.parentElement.classList.add('errorField')
     hasError = true;
+ 
   } else {
     hideErrorMessage(surnameInput);
   }
 
   if (emailValue === '' && emailInput.parentElement.classList.contains('required')) {
     showErrorMessage(emailInput, "Lütfen bir e-posta adresi girin.");
+  
+
     hasError = true;
   } else {
     hideErrorMessage(emailInput);
